pipe.im/derelict/purple/status.d


extern( C ) nothrow 
{
    alias da_purple_primitive_get_id_from_type = const(char)* function(PurpleStatusPrimitive type);																																																
    alias da_purple_primitive_get_name_from_type = const(char)* function(PurpleStatusPrimitive type);																																															
    alias da_purple_primitive_get_type_from_id = PurpleStatusPrimitive function(const(char)* id);																																																
    alias da_purple_status_type_new_full = PurpleStatusType* function(PurpleStatusPrimitive primitive, const(char)* id, const(char)* name, gboolean saveable, gboolean user_settable, gboolean independent);																					
    alias da_purple_status_type_new = PurpleStatusType* function(PurpleStatusPrimitive primitive, const(char)* id, const(char)* name, gboolean user_settable);																																	
    alias da_purple_status_type_new_with_attrs = PurpleStatusType* function(PurpleStatusPrimitive primitive, const(char)* id, const(char)* name, gboolean saveable, gboolean user_settable, gboolean independent, const(char)* attr_id, const(char)* attr_name, PurpleValue* attr_value, ...);	
    alias da_purple_status_type_destroy = void function(PurpleStatusType* status_type);																																																			
    alias da_purple_status_type_set_primary_attr = void function(PurpleStatusType* status_type, const(char)* attr_id);																																											
    alias da_purple_status_type_add_attr = void function(PurpleStatusType* status_type, const(char)* id, const(char)* name, PurpleValue* value);																																				
    alias da_purple_status_type_add_attrs = void function(PurpleStatusType* status_type, const(char)* id, const(char)* name, PurpleValue* value, ...);																																			
    alias da_purple_status_type_add_attrs_vargs = void function(PurpleStatusType* status_type, va_list args);																																													
    alias da_purple_status_type_get_primitive = PurpleStatusPrimitive function(const(PurpleStatusType)* status_type);																																											
    alias da_purple_status_type_get_id = const(char)* function(const(PurpleStatusType)* status_type);																																															
    alias da_purple_status_type_get_name = const(char)* function(const(PurpleStatusType)* status_type);																																															
    alias da_purple_status_type_is_saveable = gboolean function(const(PurpleStatusType)* status_type);																																															
    alias da_purple_status_type_is_user_settable = gboolean function(const(PurpleStatusType)* status_type);																																														
    alias da_purple_status_type_is_independent = gboolean function(const(PurpleStatusType)* status_type);																																														
    alias da_purple_status_type_is_exclusive = gboolean function(const(PurpleStatusType)* status_type);																																															
    alias da_purple_status_type_is_available = gboolean function(const(PurpleStatusType)* status_type);																																															
    alias da_purple_status_type_get_primary_attr = const(char)* function(const(PurpleStatusType)* type);																																														
    alias da_purple_status_type_get_attr = PurpleStatusAttr* function(const(PurpleStatusType)* status_type, const(char)* id);																																									
    alias da_purple_status_type_get_attrs = GList* function(const(PurpleStatusType)* status_type);																																																
    alias da_purple_status_type_find_with_id = const(PurpleStatusType)* function(GList* status_types, const(char)* id);																																											
    alias da_purple_status_attr_new = PurpleStatusAttr* function(const(char)* id, const(char)* name, PurpleValue* value_type);																																									
    alias da_purple_status_attr_destroy = void function(PurpleStatusAttr* attr);																																																				
    alias da_purple_status_attr_get_id = const(char)* function(const(PurpleStatusAttr)* attr);																																																	
    alias da_purple_status_attr_get_name = const(char)* function(const(PurpleStatusAttr)* attr);																																																
    alias da_purple_status_attr_get_value = PurpleValue* function(const(PurpleStatusAttr)* attr);																																																
    alias da_purple_status_new = PurpleStatus* function(PurpleStatusType* status_type, PurplePresence* presence);																																												
    alias da_purple_status_destroy = void function(PurpleStatus* status);																																																						
    alias da_purple_status_set_active = void function(PurpleStatus* status, gboolean active);																																																	
    alias da_purple_status_set_active_with_attrs = void function(PurpleStatus* status, gboolean active, va_list args);																																											
    alias da_purple_status_set_active_with_attrs_list = void function(PurpleStatus* status, gboolean active, GList* attrs);																																										
    alias da_purple_status_set_attr_boolean = void function(PurpleStatus* status, const(char)* id, gboolean value);																																												
    alias da_purple_status_set_attr_int = void function(PurpleStatus* status, const(char)* id, int value);																																														
    alias da_purple_status_set_attr_string = void function(PurpleStatus* status, const(char)* id, const(char)* value);																																											
    alias da_purple_status_get_type = PurpleStatusType* function(const(PurpleStatus)* status);																																																	
    alias da_purple_status_get_presence = PurplePresence* function(const(PurpleStatus)* status);																																																
    alias da_purple_status_get_id = const(char)* function(const(PurpleStatus)* status);																																																			
    alias da_purple_status_get_name = const(char)* function(const(PurpleStatus)* status);																																																		
    alias da_purple_status_is_independent = gboolean function(const(PurpleStatus)* status);																																																		
    alias da_purple_status_is_exclusive = gboolean function(const(PurpleStatus)* status);																																																		
    alias da_purple_status_is_available = gboolean function(const(PurpleStatus)* status);																																																		
    alias da_purple_status_is_active = gboolean function(const(PurpleStatus)* status);																																																			
    alias da_purple_status_is_online = gboolean function(const(PurpleStatus)* status);																																																			
    alias da_purple_status_get_attr_value = PurpleValue* function(const(PurpleStatus)* status, const(char)* id);																																												
    alias da_purple_status_get_attr_boolean = gboolean function(const(PurpleStatus)* status, const(char)* id);																																													
    alias da_purple_status_get_attr_int = int function(const(PurpleStatus)* status, const(char)* id);																																															
    alias da_purple_status_get_attr_string = const(char)* function(const(PurpleStatus)* status, const(char)* id);																																												
    alias da_purple_status_compare = gint function(const(PurpleStatus)* status1, const(PurpleStatus)* status2);																																													
    alias da_purple_presence_new = PurplePresence* function(PurplePresenceContext context);																																																		
    alias da_purple_presence_new_for_account = PurplePresence* function(PurpleAccount* account);																																																
    alias da_purple_presence_new_for_conv = PurplePresence* function(PurpleConversation* conv);																																																	
    alias da_purple_presence_new_for_buddy = PurplePresence* function(PurpleBuddy* buddy);																																																		
    alias da_purple_presence_destroy = void function(PurplePresence* presence);																																																					
    alias da_purple_presence_add_status = void function(PurplePresence* presence, PurpleStatus* status);																																														
    alias da_purple_presence_add_list = void function(PurplePresence* presence, GList* source_list);																																															
    alias da_purple_presence_set_status_active = void function(PurplePresence* presence, const(char)* status_id, gboolean active);																																								
    alias da_purple_presence_switch_status = void function(PurplePresence* presence, const(char)* status_id);																																													
    alias da_purple_presence_set_idle = void function(PurplePresence* presence, gboolean idle, time_t idle_time);																																												
    alias da_purple_presence_set_login_time = void function(PurplePresence* presence, time_t login_time);																																														
    alias da_purple_presence_get_context = PurplePresenceContext function(const(PurplePresence)* presence);																																														
    alias da_purple_presence_get_account = PurpleAccount* function(const(PurplePresence)* presence);																																															
    alias da_purple_presence_get_conversation = PurpleConversation* function(const(PurplePresence)* presence);																																													
    alias da_purple_presence_get_chat_user = const(char)* function(const(PurplePresence)* presence);																																															
    alias da_purple_presence_get_buddy = PurpleBuddy* function(const(PurplePresence)* presence);																																																
    alias da_purple_presence_get_statuses = GList* function(const(PurplePresence)* presence);																																																	
    alias da_purple_presence_get_status = PurpleStatus* function(const(PurplePresence)* presence, const(char)* status_id);																																										
    alias da_purple_presence_get_active_status = PurpleStatus* function(const(PurplePresence)* presence);																																														
    alias da_purple_presence_is_available = gboolean function(const(PurplePresence)* presence);																																																	
    alias da_purple_presence_is_online = gboolean function(const(PurplePresence)* presence);																																																	
    alias da_purple_presence_is_status_active = gboolean function(const(PurplePresence)* presence, const(char)* status_id);																																										
    alias da_purple_presence_is_status_primitive_active = gboolean function(const(PurplePresence)* presence, PurpleStatusPrimitive primitive);																												                                	
    alias da_purple_presence_is_idle = gboolean function(const(PurplePresence)* presence);																																									                                	
    alias da_purple_presence_get_idle_time = time_t function(const(PurplePresence)* presence);																																								                                	
    alias da_purple_presence_get_login_time = time_t function(const(PurplePresence)* presence);																																								                                	
